--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <span class="pageviews"><span class="num-pageviews">100K</span> Pageviews</span>
         <span class="price-section"><span class="price">$16.00</span> / month</span>
         <div class="slider-container">
-            <input type='range' min='0' max='5' id='price-range' name='price-range' class='slider'></input>
+            <input type='range' min='1' max='5' id='price-range' name='price-range' class='slider' value='3'></input>
           <div class="progress-track"></div>
         </div>
         <div class="month-year-check">
           <span>Monthly Billing</span>
           <div class="toggle-checkbox">
-            <input id='checkbox' type="checkbox">
+            <input id='checkbox' type="checkbox" >
             <label for='checkbox' class="switch">
               <span class='switch-slider'></span>
             </label>
@@ -49,8 +49,9 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">elalmamia</a>.
     </div>
   </footer>
+  <script src='script.js'></script>
 </body>
 </html>
